Closed
Bug 273849
Opened 21 years ago
Closed 21 years ago
Sending file from MS Office (Excel/Powerpoint/Access) changes original filename [attaches file with random name and extension .tmp]
Categories
(Thunderbird :: Message Compose Window, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: gregorsamsalike, Assigned: Bienvenu)
References
Details
(Keywords: fixed-aviary1.0.1)
Attachments
(1 file)
|
1.65 KB,
patch
|
mscott
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; fr-FR; rv:1.7.5) Gecko/20041108 Firefox/1.0
Build Identifier: version 1.0 (20041206)
I'm using TB 1.0 final release (WinXP) and I still encounter a major issue,
really disturbing regarding my professional use of Thunderbird. When I send an
Excel file from Excel 2003, the file attached is not correctly name : instead of
something as classeur.xls, I get a C5.tmp.
Using Powerpoint 2003, the same operation always changes filename to DRT2579.ppt.
Reproducible: Always
Steps to Reproduce:
1. Send file from Excel 2003 Pro
Actual Results:
The TB message compose window displays an attached file named "C5.tmp"
Expected Results:
TB should displays the correct filename : classeur.xls
| Assignee | ||
Comment 1•21 years ago
|
||
I see this with Excel. I'll try to fix it today, at least for the thunderbird
trunk builds.
Assignee: mscott → bienvenu
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•21 years ago
|
||
Hello gusy,
I just started to learn mozilla code ( two days ago ;-) ). And this bug
intrested me so I took a look at the code.
In my 1.0 source code, nsMapiHook::HandleAttachments() creates attachemnt object
without considering filename. So, it counts on filepath when it is different to
filename. However, the latest code from LXR shows that the filename is used when
thunderbird copies temp file into its own location (The latest trunk build is
not working for me so I couldn't test this). And, I have a question here. For
attached filename, why don't we set the 'Name' attribute of the attachement
object without regarding the filepath? Is there any reason of not using the
'Name' attribute?
| Assignee | ||
Comment 3•21 years ago
|
||
I screwed that up when fixing another bug - I need to go back and find another
fix for the original bug...
| Assignee | ||
Comment 4•21 years ago
|
||
*** Bug 274026 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 5•21 years ago
|
||
this reverts the previous checkin that broke this, and adds the code to find
the leafname from the whole filename, in the lpszfilename case.
| Assignee | ||
Updated•21 years ago
|
Attachment #168425 -
Flags: superreview?(mscott)
Updated•21 years ago
|
Attachment #168425 -
Flags: superreview?(mscott) → superreview+
*** Bug 274358 has been marked as a duplicate of this bug. ***
Summary: Sending file from Excel and Powerpoint 2003 changes original filename → Sending file from Excel/Powerpoint/Access changes original filename (wrong extension .tmp)
| Assignee | ||
Comment 7•21 years ago
|
||
fixed on 1.0 branch - this was never broken on the trunk.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 8•21 years ago
|
||
please try the latest aviary branch build -
http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/latest-0.9/
Comment 9•21 years ago
|
||
*** Bug 275780 has been marked as a duplicate of this bug. ***
Comment 10•21 years ago
|
||
Confirm, I've just test latest 0.9 and now works ok
Well done. Thanks.
Comment 11•21 years ago
|
||
*** Bug 277451 has been marked as a duplicate of this bug. ***
Comment 12•21 years ago
|
||
*** Bug 279802 has been marked as a duplicate of this bug. ***
Summary: Sending file from Excel/Powerpoint/Access changes original filename (wrong extension .tmp) → Sending file from MS Office (Excel/Powerpoint/Access) changes original filename [attaches file with random name and extension .tmp]
Version: unspecified → 1.0
| Assignee | ||
Comment 13•21 years ago
|
||
*** Bug 280678 has been marked as a duplicate of this bug. ***
Comment 14•21 years ago
|
||
*** Bug 280586 has been marked as a duplicate of this bug. ***
Comment 15•21 years ago
|
||
aviary landing keyword?
Comment 16•21 years ago
|
||
This is one of two ride along bugs I talked to Chris H. about for the 1.0.1
release.
Flags: blocking-aviary1.0.1?
Comment 17•21 years ago
|
||
I couldn't wait around for approval anymore on something I had already talked to
Chris about. Time is running out for the 1.0.1 builds.
Keywords: fixed-aviary1.0.1
Comment 18•21 years ago
|
||
vrfy'd fixed with 2005030105-1.0.1 tbird bits on winXP sp2 and office 2003
(excel, powerpoint and word).
Status: RESOLVED → VERIFIED
Comment 19•21 years ago
|
||
I tried testing this on Mac OS X 10.3.8, but I think the version of MS Office
for Mac (version X from 2001) doesn't have the features which allow me to test
this issue. namely, the File > Send To > Mail Recepient (as Attachment) is
always disabled.
0. went into Mail.app and manually changed the pref to make Tbird the default
email client.
1. open an Excel, Word or Powerpoint document, and noticed that File > Send To >
Mail Recepient (as Attachment) is diabled.
2. reset Mail.app back to default email client.
3. the menu item is now disabled.
perhaps what I'm running into is a variation of bug 255560?
Comment 20•21 years ago
|
||
out of curiosity, was the fix Windows-only? it might be, since msgMapiHook.cpp
was changed, and iirc MAPI is Windows-only...
Comment 21•21 years ago
|
||
yes simple mapi is a windows only thing.
Comment 22•21 years ago
|
||
*** Bug 285344 has been marked as a duplicate of this bug. ***
Comment 23•21 years ago
|
||
*** Bug 285587 has been marked as a duplicate of this bug. ***
Comment 24•21 years ago
|
||
clearing 1.0.1 nomination, not able to change to "+" --sorry.
Flags: blocking-aviary1.0.1?
You need to log in
before you can comment on or make changes to this bug.
Description
•