Bug #273849 -->  Thunderbird 1.0.1 ride along bug. Does not effect Firefox.

Sending file from MS Office (Excel/Powerpoint/Access) changes original filename [attaches file with random name and extension .tmp]

Patch has been on 1.0 branch and trunk since December 9th.